--- a/src/estilos/resetaEstilos.css
+++ b/src/estilos/resetaEstilos.css
@@ -10,6 +10,8 @@
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 html {
@@ -43,7 +45,6 @@ main {
 
 h1 {
   font-size: 2em;
-  margin: 0.67em 0;
 }
 
 /* Grouping content
