[Correção] erro de digitação

--- a/src/estilos/global.css
+++ b/src/estilos/global.css
@@ -1,7 +1,7 @@
 :root {
   --primaria: #da0175;
   --verde: #1fa7af;
-  --verde-calro: #eef6f6;
+  --verde-claro: #eef6f6;
   --vermelho: #971d1d;
   --vermelho-claro: #ffefef;
   --amarelo: #c5a605;
