--- a/src/estilos/global.css
+++ b/src/estilos/global.css
@@ -6,6 +6,8 @@
   --vermelho-claro: #ffefef;
   --amarelo: #c5a605;
   --amarelo-claro: #fcf6dc;
+  --verde-escuro: #0E8750;
+  --cinza: #3F3F55;
 
   --fonte-primaria: "Nunito", sans-serif;
   --fonte-secundaria: "Montserrat", sans-serif;
