novas classes para global.css

--- a/src/estilos/global.css
+++ b/src/estilos/global.css
@@ -7,7 +7,8 @@
   --amarelo: #c5a605;
   --amarelo-claro: #fcf6dc;
   --verde-escuro: #0E8750;
-  --cinza: #3F3F55;
+  --cinza-claro: #F0F0F5;
+  --cinza-escuro: #344054;
 
   --fonte-primaria: "Nunito", sans-serif;
   --fonte-secundaria: "Montserrat", sans-serif;
