--- a/src/estilos/utilitarios.css
+++ b/src/estilos/utilitarios.css
@@ -7,11 +7,68 @@
   flex-direction: column;
 }
 
+.flex-1 {
+  flex: 1;
+}
+
+.flex-grow {
+  flex-grow: 1;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.gap-1 {
+  gap: 1rem;
+}
+
+.gap-2 {
+  gap: 2rem;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
 .btn-primario {
   background-color: var(--primaria);
 }
 
 .btn-secundario {
   background-color: #dedee9;
-  color: #0e8750;
+  color: var(--verde-escuro);
+}
+
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+.bg-verde-claro {
+  background-color: var(--verde-claro);
+}
+
+.texto-verde {
+  color: var(--verde);
+}
+
+.bg-vermelho-claro {
+  background-color: var(--vermelho-claro);
+}
+
+.texto-vermelho {
+  color: var(--vermelho);
+}
+
+.bg-amarelo-claro {
+  background-color: var(--amarelo-claro);
+}
+
+.texto-amarelo {
+  color: var(--amarelo);
 }
