--- a/src/estilos/global.css
+++ b/src/estilos/global.css
@@ -6,8 +6,8 @@
   --vermelho-claro: #ffefef;
   --amarelo: #c5a605;
   --amarelo-claro: #fcf6dc;
-  --verde-escuro: #0E8750;
-  --cinza-claro: #F0F0F5;
+  --verde-escuro: #0e8750;
+  --cinza-claro: #f0f0f5;
   --cinza-escuro: #344054;
 
   --fonte-primaria: "Nunito", sans-serif;
@@ -47,4 +47,13 @@ input {
   padding: 0.7rem 1rem;
 
   width: 100%;
+}
+
+label {
+  display: inline-block;
+
+  font-weight: 600;
+  font-size: 0.8rem;
+
+  margin-bottom: 0.2rem;
 }
