utilitarios de margin-bottom

--- a/src/estilos/utilitarios.css
+++ b/src/estilos/utilitarios.css
@@ -73,6 +73,14 @@
   color: var(--amarelo);
 }
 
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+.mb-2 {
+  margin-bottom: 2rem;
+}
+
 .scale-in-center {
   -webkit-animation: scale-in-center 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94)
     both;
