--- a/src/layouts/layoutDashboard/estilos.module.css
+++ b/src/layouts/layoutDashboard/estilos.module.css
@@ -111,6 +111,8 @@
   position: absolute;
   right: -0.84rem;
   margin-top: 0.6rem;
+
+  z-index: 10;
 }
 
 .usuarioMenuContainer {
@@ -119,12 +121,11 @@
   gap: 1.5rem;
 
   position: relative;
+  padding-top: 0.2rem;
 }
 
 .usuarioMenuContainer::before {
   background: white;
-  box-shadow: 2px 6px 11px -2px rgb(0, 0, 0, 0.2);
-  border: 1px solid rgba(0, 0, 0, 0.1);
 
   content: "";
 
@@ -137,8 +138,6 @@
 
   width: 1rem;
   height: 1rem;
-
-  z-index: -1;
 }
 
 .usuarioMenuItem {
