Mergiar Cadastro na Hml  (#14)
* .env

* componentização de formulários

* validações de inputs no cadastro>inicio

* margem sob os títulos dos formulários

* validações do formulário de senhas

* ajuste nas validações de senha

* bug validação corrigido

--- a/src/componentes/cadastroComps/FormularioSenha/estilos.module.css
+++ b/src/componentes/cadastroComps/FormularioSenha/estilos.module.css
@@ -6,6 +6,11 @@
     color: var(--cinza-escuro);
     font-family: var(--fonte-primaria);
     font-weight: 600;
+    position: relative;
+}
+
+.input {
+    width: 23rem;
 }
 
 .button {
@@ -15,11 +20,25 @@
     margin-bottom: 1rem;
 }
 
-.input {
-    width: 23rem;
-}
-
 .img {
     position: absolute;
     bottom: 10vh;
+}
+
+.olho {
+    cursor: pointer;
+    position: absolute;
+    bottom: 1.6rem;
+    left: 20rem;
+}
+
+.erro {
+    border: none;
+    border: 0.1rem solid red;
+}
+
+.span {
+    color: red;
+    position: relative;
+    bottom: 0.8rem;
 }
