--- a/src/estilos/utilitarios.css
+++ b/src/estilos/utilitarios.css
@@ -81,6 +81,19 @@
   margin-bottom: 2rem;
 }
 
+.inputErro {
+  border-color: #e70000;
+}
+
+.inputMensagemErro {
+  color: #e70000;
+
+  font-size: 0.8rem;
+  font-family: var(--fonte-inter);
+
+  margin-top: 0.2rem;
+}
+
 .scale-in-center {
   -webkit-animation: scale-in-center 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94)
     both;
