--- a/src/layouts/layoutGlobal/MenuTopo/estilos.module.css
+++ b/src/layouts/layoutGlobal/MenuTopo/estilos.module.css
@@ -7,9 +7,12 @@
 }
 
 .tituloDaRota {
-  font-size: 1.4rem;
-
-  margin: 0;
+  font-size: 1rem;
+  font-family: var(--fonte-inter);
+  font-weight: 400;
+  color: var(--verde-escuro);
+  position: absolute;
+  top: 3rem;
 }
 
 .usuarioContainer {
