--- a/src/paginas/clientes/estilos.module.css
+++ b/src/paginas/clientes/estilos.module.css
@@ -25,3 +25,75 @@
 .inputContainerUF {
   max-width: 12ch;
 }
+
+.listagem {
+  background: white;
+  border-radius: 30px;
+
+  padding: 2rem;
+}
+
+.listagemHeader {
+  border-bottom: 1px solid #eff0f6;
+
+  display: grid;
+  grid-template-columns: repeat(6, calc((100% - 5rem) / 6));
+  gap: 1rem;
+
+  font-weight: 700;
+
+  text-align: center;
+
+  padding-bottom: 1rem;
+}
+
+.listagemBody {
+  list-style: none;
+}
+
+.listagemBody li {
+  border-bottom: 1px solid #eff0f6;
+
+  color: #747488;
+
+  display: grid;
+  grid-template-columns: repeat(6, calc((100% - 5rem) / 6));
+  gap: 1rem;
+  align-items: center;
+
+  font-size: 0.9rem;
+
+  text-align: center;
+
+  padding: 0.6rem 0;
+}
+
+.listagemBody li:last-of-type {
+  border: 0;
+  padding-bottom: 0;
+}
+
+.listagemBody span {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.listagemBody span:first-of-type,
+.listagemHeader span:first-of-type {
+  text-align: left;
+}
+
+.listagemBody span:last-of-type {
+  color: var(--primaria);
+  cursor: pointer;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  font-weight: 600;
+  font-size: 0.8rem;
+
+  text-align: right;
+}
