--- a/src/estilos/global.css
+++ b/src/estilos/global.css
@@ -2,6 +2,7 @@
   --primaria: #da0175;
   --verde: #1fa7af;
   --verde-claro: #eef6f6;
+  --branco: #ffffff;
   --vermelho: #971d1d;
   --vermelho-claro: #ffefef;
   --amarelo: #c5a605;
