--- a/src/paginas/cobrancas/estilos.module.css
+++ b/src/paginas/cobrancas/estilos.module.css
@@ -1,7 +1,3 @@
-.clientesSecao section {
-    margin-bottom: 2rem;
-  }
-  
   .inputContainer {
     position: relative;
   
@@ -22,13 +18,92 @@
     transform: translateY(-50%);
   }
   
-  .inputContainerUF {
-    max-width: 12ch;
-  }
-  
   .filtro {
       padding: 0.5rem;
-      background-color: #fff;
+      background-color: var(--branco);
       border-radius: 10px;
       cursor: pointer;
+  }
+
+  .main {
+    max-width: 1440px;
+    background-color: var(--branco);
+    border-radius: 2rem;
+  }
+
+  .headerContainer {
+    width: 100%;
+    padding: 1rem;
+    border-bottom: 1px solid #EFF0F6
+  }
+
+  .headerItem {
+    width: 12%;
+    font-weight: 700;
+  }
+  
+  .ordenar {
+    cursor: pointer;
+  }
+  
+  .headerItem2{
+    font-weight: 700;
+    width: 30%;
+  }
+
+  .headerItem3 {
+    font-weight: 700;
+    width: 10%;
+  }
+
+  .containerItems {
+    padding: 1rem;
+    width: 100%;
+    border-bottom: 1px solid #EFF0F6;
+  }
+  
+  .items {
+    width: 12%;
+    font-size: 0.8rem;
+    color: #6e6e85;
+  }
+  
+  .item2 {
+    font-size: 0.8rem;
+    overflow: hidden;
+    width: 30%;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+
+  .divIcones {
+    width: 12%;
+    font-size: 0.8rem;
+    cursor: pointer;
+    gap: 0.3rem
+  }
+
+  .pendente {
+    background-color: #FCF6DC;
+    color: var(--amarelo);
+    font-weight: 700;
+    padding: 0.4rem;
+    border-radius: 0.8rem;
+  }
+
+  .paga {
+    color:  var(--verde);
+    background-color: var(--verde-claro);
+    font-weight: 700;
+    padding: 0.4rem;
+    border-radius: 0.8rem;
+    
+  }
+  
+  .vencida {
+    background-color: #FFEFEF;
+    color: var(--vermelho);
+    font-weight: 700;
+    padding: 0.4rem;
+    border-radius: 0.8rem;
   }
