Coloquei o botao de filtro na pagina clientes

--- a/src/paginas/clientes/estilos.module.css
+++ b/src/paginas/clientes/estilos.module.css
@@ -2,6 +2,11 @@
   margin-bottom: 2rem;
 }
 
+.filtroBtn {
+  background: white;
+  padding: 0 0.6rem;
+}
+
 .inputContainer {
   position: relative;
 
