--- a/src/componentes/FormularioLogin/estilos.module.css
+++ b/src/componentes/FormularioLogin/estilos.module.css
@@ -16,3 +16,20 @@
 .input {
     width: 23rem;
 }
+
+.label {
+    position: relative;
+}
+
+.erro {
+    border-color: red;
+}
+
+.erro2 {
+    position: absolute;
+    top: 3.7rem;
+    left: 3.7rem;
+    color: red;
+    font-size: 1rem;
+    font-weight: 400;
+}
