--- a/src/estilos/utilitarios.css
+++ b/src/estilos/utilitarios.css
@@ -119,6 +119,10 @@
   margin-top: 0.2rem;
 }
 
+.hidden {
+  display: none !important;
+}
+
 .scale-in-center {
   -webkit-animation: scale-in-center 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94)
     both;
