--- a/src/paginas/home/CardCobrancas/estilos.module.css
+++ b/src/paginas/home/CardCobrancas/estilos.module.css
@@ -61,6 +61,9 @@
 
 .listaItem span:first-of-type {
   text-align: left;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .listaItem span:last-of-type {
